# nubedian-project

./: Cargo.toml  Rocket.toml
db/: CPU_list.sql  nubedian.sql
src/: back.rs  main.rs
templates/: cpu_details.hbs  cpu_list.hbs  home.hbs  ~$uveau Document Microsoft Word.docx
