[package]
name = "nubedian-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = { version = "1.0" }
sqlx = { version = "0.4.1", default-features = false, features = [ "macros", "mysql", "uuid", "chrono", "migrate", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.11"
features = ["handlebars_templates"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_mysql"]